# thermo-pico

./: CMakeLists.txt  README.md  thermo.c
